# video_explainer

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  Varun copy.MOV  avatar-generation.skill  background-video-generation.skill  design.md  generate_video.py  progress.md  pyproject.toml
.commands/: generate-video-and-audio-for-the-scene
.cursor/plans/: ai_video_word_groups_a10a9fd7.plan.md  director_chat_setup_4509f80c.plan.md  evidence_curation_pipeline_746e87d3.plan.md  unified_storytelling_prompts_d76f9649.plan.md
director-chat/: .env.example  CLAUDE.md  drizzle.config.ts  next.config.ts  package.json  vercel.json
director-chat/components/: data-stream-handler.tsx  multimodal-input.tsx  prompt-suggestions.tsx
director-mcp/: README.md  requirements.txt  test_skills.py
docs/: CLI.md  DIRECTOR_MCP_PLAN.md  REFINEMENT.md  SHORTS.md  VIDEO_PRODUCTION_GUIDELINES.md
remotion/: package-lock.json  package.json  remotion.config.ts
remotion-templates/: README.md  schema.json
scripts/: generate_ai_video.py  generate_heygen_avatar.py  generate_scene.py
src/: config.py  models.py
src/cli/: main.py  (+1 more)
tests/: EVIDENCE_PIPELINE_TEST_ARTIFACTS.md  conftest.py  test_audio.py  test_cli.py  test_director_prompt.py  test_e2e.py  test_eval.py  test_evidence_pipeline.py  test_factory.py  test_factory_integration.py  test_ingestion.py  test_integration_llm.py  test_music.py  test_pdf_parser.py  test_pipeline.py  test_scene_validator.py  test_scenes.py  test_script.py  test_short.py  test_shorts_generator.py  test_sound.py  test_url_parser.py  test_voiceover.py
(+218 files in other folders)
